# tsnp

./: CMakeLists.txt  README.md
src/: CMakeLists.txt  MainWindow.cpp  MainWindow.h  john.txt  main.cpp  mainwindow.h
src/canvas/: CanvasWidget.cpp  CanvasWidget.h
